--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client":"npm start --prefix client",
     "admin":"npm start --prefix admin",
     "dev1": "nodemon src/server.ts",
-    "dev": "concurrently \"npm start\" \"npm run client\" \"npm run admin\" ",
+    "dev": "concurrently \"npm dev1\" \"npm run client\" \"npm run admin\" ",
     "build": "tsc -p ."
   },
   "keywords": [],
