--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node dist/server.js",
+    "start": "ts-node src/server.js",
     "client":"npm start --prefix client",
     "admin":"npm start --prefix admin",
     "dev1": "nodemon src/server.ts",
